--- a/public/pages/Home.html
+++ b/public/pages/Home.html
@@ -84,7 +84,7 @@
               <select
                 id="language-select"
                 name="language"
-                class="text-white w-full sm:w-48 md:w-40 p-3 rounded-lg border bg-white/30 backdrop-blur-md text-black shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
+                class="w-full sm:w-48 md:w-40 p-3 rounded-lg border bg-white/30 backdrop-blur-md text-black shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
               >
                 <option value="" hidden>Choose a language</option>
                 <option value="English">English</option>
@@ -98,7 +98,7 @@
               <select
                 id="genre-select"
                 name="genre"
-                class="text-white w-full sm:w-48 md:w-40 p-3 rounded-lg border bg-white/30 backdrop-blur-md text-black shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
+                class="w-full sm:w-48 md:w-40 p-3 rounded-lg border bg-white/30 backdrop-blur-md text-black shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
               >
                 <option value="" hidden>Choose a genre</option>
                 <option value="action">Action</option>
@@ -114,7 +114,7 @@
               <select
                 id="format-select"
                 name="format"
-                class="text-white w-full sm:w-48 md:w-40 p-3 rounded-lg border bg-white/30 backdrop-blur-md text-black shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
+                class="w-full sm:w-48 md:w-40 p-3 rounded-lg border bg-white/30 backdrop-blur-md text-black shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
               >
                 <option value="" hidden>Choose a format</option>
                 <option value="HD">HD</option>
